<resources>
    <string name="app_name">Conversion</string>

    <!--Fragment Currency-->
    <string name="fc_pesos">Pesos: </string>
    <string name="fc_convertir">Convertir a nro: </string>
    <string name="fc_Resultado">Resultado: $ %f </string>

    <!--Fragment Money-->
    <string name="fm_title">Agregar/Actualizar una Moneda</string>
    <string name="fm_buscar">Buscar una Moneda</string>
    <string name="fm_moneda">Ingrese el nombre de la moneda</string>
    <string name="fm_valor">Ingrese el valor de la moneda en pesos</string>
    <string name="fm_button_buscar">Buscar Moneda</string>
    <string name="fm_button_agregar">Agregar Moneda</string>
    <string name="fm_button_actualizar">Actualizar Moneda</string>
    <string name="fm_button_eliminar">Eliminar Moneda</string>

    <!--MENU-->
    <string name="menu_titel_agregar">Agregar una Moneda</string>
    <string name="menu_agregar">Agregar una moneda...</string>

    <!--Formato a salida de monedas-->
    <string name="formato_nro"><![CDATA[<b>nro: </b>]]></string>
    <string name="formato_moneda"><![CDATA[<b>moneda: </b>]]></string>
    <string name="formato_valor"><![CDATA[<b>valor: $</b>]]></string>
    <string name="formato_no_hay_monedas"><![CDATA[<b>No hay monedas ingresadas</b>]]></string>

    <!--Mensajes-->
    <string name="msg_faltan_datos">Ingrese nombre y valor!</string>
    <string name="msg_Agregado">Moneda Agregada</string>
    <string name="msg_modificado">Moneda Mofidicada</string>
    <string name="msg_eliminado">Moneda Eliminada</string>
</resources>