<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-app"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".money.MoneyFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.conversion.money.MoneyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E6E6">


        <Button
            android:id="@+id/buttonAgregar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/fm_button_agregar"
            android:onClick="@{()->viewModel.onAgregar()}"
            android:visibility="@{viewModel.enabledAgregar}"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/editTextValor" />

        <Button
            android:id="@+id/buttonBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/fm_button_buscar"
            android:onClick="@{()->viewModel.onBuscar()}"
            android:visibility="@{viewModel.enabledBuscar}"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.498"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/editTextValor" />

        <Button
            android:id="@+id/buttonEliminar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/fm_button_eliminar"
            android:onClick="@{()->viewModel.onEliminar()}"
            android:visibility="@{viewModel.enabledEliminar}"
            app2:layout_constraintBaseline_toBaselineOf="@+id/buttonActualizar"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toEndOf="@+id/buttonActualizar" />

        <Button
            android:id="@+id/buttonActualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="40dp"
            android:text="@string/fm_button_actualizar"
            android:onClick="@{()->viewModel.onModificar()}"
            android:visibility="@{viewModel.enabledModificar}"
            app2:layout_constraintEnd_toStartOf="@+id/buttonEliminar"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/editTextValor" />

        <EditText
            android:id="@+id/editTextMoneda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/fm_moneda"
            android:inputType="textPersonName"
            android:enabled="@{viewModel.editableNombre}"
            android:text="@={viewModel.editMoneda}"
            android:textColor="#000000"
            android:textColorHint="#636262"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.0"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/fm_valor"
            android:inputType="numberDecimal"
            android:visibility="@{viewModel.enabledValor}"
            android:text="@={viewModel.editValor}"
            android:textColor="#000000"
            android:textColorHint="#636262"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.0"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/editTextMoneda" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/fm_title"
            android:textColor="#000000"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.498"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>